<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>laserscan_multi_merger</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nuc-bs@todo.todo">nuc-bs</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tf2</depend>
  <depend>PCL</depend>
  <depend>Eigen3</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>laser_geometry</depend>
  <depend>libpcl-all-dev</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>eigen3</exec_depend>
  <exec_depend>pcl</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
